--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
         package="ca.cshawi.myinventory">
 
     <application
+            android:name=".MyInventory"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true">
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -25,4 +27,5 @@
                 android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
