--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "lab03",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/guilmarc/420-2SU-Lab03.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/guilmarc/420-2SU-Lab03/issues"
-  },
-  "homepage": "https://github.com/guilmarc/420-2SU-Lab03#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "chalk": "^3.0.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.6",
-    "mongoose": "^5.9.9",
-    "pug": "^2.0.4"
-  }
+    "name": "gp-backend",
+    "version": "1.0.0",
+    "private": true,
+    "main": "app.js",
+    "scripts": {
+        "start": "nodemon app.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mongodb": "^3.5.6",
+        "mongoose": "^5.9.9"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.3"
+    }
 }
