--- a/node-server/package.json
+++ b/node-server/package.json
@@ -4,10 +4,12 @@
     "private": true,
     "main": "app.js",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "postinstall": "node postinstall.js"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongodb": "^3.5.6",
         "mongoose": "^5.9.9"
