--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
                 android:name=".ShowItemsActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+                android:name=".AddBoxActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
