--- a/node-server/package.json
+++ b/node-server/package.json
@@ -12,7 +12,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "mongodb": "^3.5.6",
-        "mongoose": "^5.9.9"
+        "mongoose": "^5.9.9",
+        "pug": "^2.0.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
